<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/md_theme_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_profile_full_name_hint"
            android:inputType="textPersonName"
            android:autofillHints="name" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_profile_email_hint"
            android:inputType="textEmailAddress"
            android:layout_marginTop="8dp"
            android:autofillHints="emailAddress" />

        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_profile_phone_hint"
            android:inputType="phone"
            android:layout_marginTop="8dp"
            android:autofillHints="phone" />

        <EditText
            android:id="@+id/edt_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_profile_address_hint"
            android:layout_marginTop="8dp"
            android:autofillHints="postalAddress" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_profile_new_password_hint"
            android:inputType="textPassword"
            android:layout_marginTop="8dp"
            android:autofillHints="password" />

        <Button
            android:id="@+id/btn_save_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginTop="16dp" />

    </LinearLayout>

</ScrollView>
